Fixed issue of white space on bottom of screen after refresh.
Body now has a min-height of 100vh at smaller screen sizes.

--- a/src/main.scss
+++ b/src/main.scss
@@ -44,6 +44,7 @@ $color-unbleached-silk: #ffe2d1;
     @media(max-width: 899px) {
             & {
                 height: initial;
+                min-height: 100vh;
             } 
 
             &__container {
